some new  section added

--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
       <div class="header-container">
         <div class="logo">
           <img src="images/Frame.png" alt="logo" />
-          <h2><span>G</span>emer</h2>
+          <p class="lh-bold"><span class="lt-red">G</span>emer</p>
         </div>
         <nav>
           <ul>
-            <li><a href="">About</a></li>
-            <li><a href="">Developers </a></li>
+            <li><a class="nA" href="">About</a></li>
+            <li><a class="nA" href="">Developers </a></li>
             <li class="fobtn">
-              Follow Us On
-              <button><i class="fa-brands fa-youtube"></i></button>
-              <button><i class="fa-brands fa-tiktok"></i></button>
+              <p>Follow Us On</p>
+              <a href="">
+                <img src="images/youtube.png" alt="" />
+              </a>
+              <a href="">
+                <img src="images/tik-tok 1.png" alt="" />
+              </a>
             </li>
           </ul>
         </nav>
@@ -35,11 +39,17 @@
     <section class="banner-section">
       <div class="banner-container">
         <div class="banner-intro">
-          <p>PLAY LIKE THE <b>G.O.A.T</b></p>
+          <p class="b-p">
+            PLAY LIKE THE <span class="b-pink"><b>G.O.A.T</b></span>
+          </p>
 
-          <p><i></i> 1-click instan play</p>
-          <p><i></i> No Download</p>
-          <p><i></i> 1000s of supported online games</p>
+          <p class="">
+            <i class="fa-regular fa-circle-play"></i> 1-click instan play
+          </p>
+          <p><i class="fa-solid fa-download"></i> No Download</p>
+          <p>
+            <i class="fa-solid fa-users"></i> 1000s of supported online games
+          </p>
           <button>SIGN IN</button>
           <button>GO ROGUE</button>
         </div>
@@ -73,7 +83,6 @@
       <div class="games-container">
         <div class="gm-tx">
           <h2>Online Games Funny Videos</h2>
-
           <p>A Collection of hilarious videos to Brighten Your Day</p>
         </div>
 
@@ -180,9 +189,113 @@
         </div>
 
         <div class="careers-img">
-          <img src="images/Group 65.png" alt="">
+          <img src="images/Group 65.png" alt="" />
         </div>
       </div>
     </section>
+
+    <section class="allgames-section">
+      <div class="allgames-container">
+        <div class="allgames-cards">
+          <div class="allgame-card">
+            <img src="/images/Rectangle 11.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="/images/Rectangle 11.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="/images/Rectangle 11.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="/images/Rectangle 11.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="/images/Rectangle 11.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="/images/Rectangle 11.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="/images/Rectangle 11.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="/images/Rectangle 11.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="/images/Rectangle 11.png" alt="" />
+            <p>Action Games</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer-section">
+      <div class="footer-container">
+        <div class="logo">
+          <img src="images/Frame.png" alt="" />
+          <h2>Gamer</h2>
+        </div>
+
+        <div class="footer-nav">
+          <ul>
+            <li>Our Stroy</li>
+            <li>Games</li>
+            <li>Web Games</li>
+            <li>Careers</li>
+            <li>Support</li>
+            <li>My Account</li>
+          </ul>
+        </div>
+
+        <div class="footer-icon">
+          <ul>
+            <li>
+              <button><i class="fa-brands fa-twitter"></i></button>
+            </li>
+
+            <li>
+              <button><i class="fa-brands fa-facebook"></i></button>
+            </li>
+
+            <li>
+              <button><i class="fa-brands fa-youtube"></i></button>
+            </li>
+
+            <li>
+              <button><i class="fa-brands fa-linkedin"></i></button>
+            </li>
+
+            <li>
+              <button><i class="fa-brands fa-instagram"></i></button>
+            </li>
+          </ul>
+        </div>
+
+        <div class="policy">
+          <p>Terms and Conditions</p>
+          <p>Privacy Policy</p>
+          <p>Cookie Policy</p>
+          <p>Privacy Setting</p>
+        </div>
+
+        <p class="fo-p">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+      </div>
+    </footer>
   </body>
 </html>
