some changes added

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
           <img src="images/pngwing 4.png" alt="" />
         </div>
         <div class="know-de">
-          <h2>we are gamer</h2>
-          <p>
+          <h2>We are gamer</h2>
+          <p class="pt">
             An international digital games and entertainment company. We
             develop, publish and distribute multiplayer mobile games. We reach
             over 400 million players each month and our audience keeps growing.
           </p>
-          <button>KNOW MORE</button>
-          <p>Our purpose...</p>
-          <p><q>unleash the gamer in everyone</q></p>
+          <button class="know-btn">KNOW MORE</button>
+          <p class="pp">Our purpose...</p>
+          <p class="pq"><q>unleash the gamer in everyone</q></p>
         </div>
       </div>
     </section>
@@ -82,7 +82,7 @@
     <section class="games-section">
       <div class="games-container">
         <div class="gm-tx">
-          <h2>Online Games Funny Videos</h2>
+          <h2>Online Games <span>Funny Videos</span> </h2>
           <p>A Collection of hilarious videos to Brighten Your Day</p>
         </div>
 
@@ -113,14 +113,18 @@
     <section class="anniversary-section">
       <div class="anniversary-container">
         <div class="ani-tx">
-          <p>
+
+           
+          <p class="play-text">
             <span>Play Instantly, </span>
             No Downloads No Installs.
           </p>
-          <p>
+          <p class="play-para">
             Play games online for free without downloading. Just click the Play
             button and play instantly in your browser
           </p>
+
+
         </div>
 
         <div class="ani-img">
@@ -138,11 +142,11 @@
         </div>
 
         <div class="anid-tx">
-          <p>
+          <p class="play-text2">
             <span>Play Games Online</span>
             Anywhere, Anytime!
           </p>
-          <p>
+          <p class="play-para2">
             PC. dad s phone, moms tablet, or your Chromebook, with Gamer you can
             play your favorite games online for free, any time, anywhere , on
             any device.
@@ -155,7 +159,7 @@
       <div class="careers-container">
         <div class="careers-info">
           <h3>Careers</h3>
-          <p>
+          <p class="wt">
             Gamer is driven to create the best and most fun games for our
             millions of players all around the world, and we,re always on the
             lookout for more top talent to join our growing team. If you,d like
@@ -185,7 +189,7 @@
               <p>Lisbon, Portugal</p>
             </div>
           </div>
-          <button>SEE ALL POSITIONS</button>
+          <button class="posi-btn">SEE ALL POSITIONS</button>
         </div>
 
         <div class="careers-img">
@@ -203,43 +207,43 @@
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 11.png" alt="" />
-            <p>Action Games</p>
+            <img src="/images/Rectangle 12.png" alt="" />
+            <p>Adventure Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 11.png" alt="" />
-            <p>Action Games</p>
+            <img src="/images/Rectangle 13.png" alt="" />
+            <p>Arcade Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 11.png" alt="" />
-            <p>Action Games</p>
+            <img src="/images/Rectangle 14.png" alt="" />
+            <p>Educational Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 11.png" alt="" />
-            <p>Action Games</p>
+            <img src="/images/Rectangle 15.png" alt="" />
+            <p>Word Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 11.png" alt="" />
-            <p>Action Games</p>
+            <img src="/images/Rectangle 16.png" alt="" />
+            <p>Role Palying Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 11.png" alt="" />
-            <p>Action Games</p>
+            <img src="/images/Rectangle 17.png" alt="" />
+            <p>Music & Audio Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 11.png" alt="" />
-            <p>Action Games</p>
+            <img src="/images/Rectangle 18.png" alt="" />
+            <p>Puzzle Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 11.png" alt="" />
-            <p>Action Games</p>
+            <img src="/images/Rectangle 19.png" alt="" />
+            <p>Strategy Games</p>
           </div>
         </div>
       </div>
