--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gamer zone</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon" />
+    <link rel="stylesheet" href="responsive.css" />
+    <link rel="shortcut icon" href="images/frame.png" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/c0ce1703a8.js"
       crossorigin="anonymous"
@@ -15,8 +16,8 @@
     <header>
       <div class="header-container">
         <div class="logo">
-          <img src="images/Frame.png" alt="logo" />
-          <p class="lh-bold"><span class="lt-red">G</span>emer</p>
+          <img src="images/frame.png" alt="logo" />
+          <p class="lh-bold"><span class="lt-p">G</span>emer</p>
         </div>
         <nav>
           <ul>
@@ -28,7 +29,7 @@
                 <img src="images/youtube.png" alt="" />
               </a>
               <a href="">
-                <img src="images/tik-tok 1.png" alt="" />
+                <img src="images/tik-tok1.png" alt="" />
               </a>
             </li>
           </ul>
@@ -43,19 +44,21 @@
             PLAY LIKE THE <span class="b-pink"><b>G.O.A.T</b></span>
           </p>
 
-          <p class="">
+          <p class="b_color">
             <i class="fa-regular fa-circle-play"></i> 1-click instan play
           </p>
-          <p><i class="fa-solid fa-download"></i> No Download</p>
-          <p>
+          <p class="b_color">
+            <i class="fa-solid fa-download"></i> No Download
+          </p>
+          <p class="b_color">
             <i class="fa-solid fa-users"></i> 1000s of supported online games
           </p>
-          <button>SIGN IN</button>
-          <button>GO ROGUE</button>
+          <button class="btn-p">SIGN IN</button>
+          <button class="btn-b">GO ROGUE</button>
         </div>
 
         <div class="banner-img">
-          <img src="images/Group 18.png" alt="" />
+          <img src="images/group18.png" alt="" />
         </div>
       </div>
     </section>
@@ -63,17 +66,17 @@
     <section class="know-section">
       <div class="know-container">
         <div class="know-img">
-          <img src="images/pngwing 4.png" alt="" />
+          <img src="images/pngwing4.png" alt="" />
         </div>
         <div class="know-de">
-          <h2>We are gamer</h2>
-          <p class="pt">
+          <h2 class="">We are gamer</h2>
+          <p class="pt b_color">
             An international digital games and entertainment company. We
             develop, publish and distribute multiplayer mobile games. We reach
             over 400 million players each month and our audience keeps growing.
           </p>
-          <button class="know-btn">KNOW MORE</button>
-          <p class="pp">Our purpose...</p>
+          <button class="know-btn btn-p">KNOW MORE</button>
+          <p class="pp b_color">Our purpose...</p>
           <p class="pq"><q>unleash the gamer in everyone</q></p>
         </div>
       </div>
@@ -82,29 +85,35 @@
     <section class="games-section">
       <div class="games-container">
         <div class="gm-tx">
-          <h2>Online Games <span>Funny Videos</span> </h2>
-          <p>A Collection of hilarious videos to Brighten Your Day</p>
+          <h2>Online Games <span>Funny Videos</span></h2>
+          <p class="b_color">
+            A Collection of hilarious videos to Brighten Your Day
+          </p>
         </div>
 
         <div class="games-cards">
           <div class="game-card">
-            <img src="images/Rectangle 4.png" alt="" />
-            <p>No download.No installs.Play games instantly on Gamer.</p>
+            <img src="images/rectangle4.png" alt="" />
+            <p class="b_color">
+              No download.No installs.Play games instantly on Gamer.
+            </p>
           </div>
 
           <div class="game-card">
-            <img src="images/Rectangle 5.png" alt="" />
-            <p>Did you score? #unblockedgames #schoo</p>
+            <img src="images/rectangle5.png" alt="" />
+            <p class="b_color">Did you score? #unblockedgames #schoo</p>
           </div>
 
           <div class="game-card">
-            <img src="images/Rectangle 6.png" alt="" />
-            <p>Breaking game records like OG</p>
+            <img src="images/rectangle6.png" alt="" />
+            <p class="b_color">Breaking game records like OG</p>
           </div>
 
           <div class="game-card">
-            <img src="images/Rectangle 7.png" alt="" />
-            <p>Busted gaming on school laptop, but you are still lit.</p>
+            <img src="images/rectangle7.png" alt="" />
+            <p class="b_color">
+              Busted gaming on school laptop, but you are still lit.
+            </p>
           </div>
         </div>
       </div>
@@ -113,23 +122,19 @@
     <section class="anniversary-section">
       <div class="anniversary-container">
         <div class="ani-tx">
-
-           
           <p class="play-text">
             <span>Play Instantly, </span>
             No Downloads No Installs.
           </p>
-          <p class="play-para">
+          <p class="play-para b_color">
             Play games online for free without downloading. Just click the Play
             button and play instantly in your browser
           </p>
-
-
         </div>
 
         <div class="ani-img">
-          <img class="image1" width="" src="images/Rectangle 55.png" alt="" />
-          <img class="image2" src="images/Rectangle 66.png" alt="" />
+          <img class="image1" width="" src="images/rectangle55.png" alt="" />
+          <img class="image2" src="images/rectangle66.png" alt="" />
         </div>
       </div>
     </section>
@@ -137,8 +142,8 @@
     <section class="anid-section">
       <div class="anid-container">
         <div class="anid-img">
-          <img class="anid-img1" src="images/Rectangle 67.png" alt="" />
-          <img class="anid-img2" src="images/Rectangle 78.png" alt="" />
+          <img class="anid-img1" src="images/rectangle67.png" alt="" />
+          <img class="anid-img2" src="images/rectangle78.png" alt="" />
         </div>
 
         <div class="anid-tx">
@@ -146,7 +151,7 @@
             <span>Play Games Online</span>
             Anywhere, Anytime!
           </p>
-          <p class="play-para2">
+          <p class="play-para2 b_color">
             PC. dad s phone, moms tablet, or your Chromebook, with Gamer you can
             play your favorite games online for free, any time, anywhere , on
             any device.
@@ -193,7 +198,7 @@
         </div>
 
         <div class="careers-img">
-          <img src="images/Group 65.png" alt="" />
+          <img src="images/group65.png" alt="" />
         </div>
       </div>
     </section>
@@ -202,47 +207,47 @@
       <div class="allgames-container">
         <div class="allgames-cards">
           <div class="allgame-card">
-            <img src="/images/Rectangle 11.png" alt="" />
+            <img src="/images/rectangle11.png" alt="" />
             <p>Action Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 12.png" alt="" />
+            <img src="/images/rectangle12.png" alt="" />
             <p>Adventure Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 13.png" alt="" />
+            <img src="/images/rectangle13.png" alt="" />
             <p>Arcade Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 14.png" alt="" />
+            <img src="/images/rectangle14.png" alt="" />
             <p>Educational Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 15.png" alt="" />
+            <img src="/images/rectangle15.png" alt="" />
             <p>Word Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 16.png" alt="" />
+            <img src="/images/rectangle16.png" alt="" />
             <p>Role Palying Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 17.png" alt="" />
+            <img src="/images/rectangle17.png" alt="" />
             <p>Music & Audio Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 18.png" alt="" />
+            <img src="/images/rectangle18.png" alt="" />
             <p>Puzzle Games</p>
           </div>
 
           <div class="allgame-card">
-            <img src="/images/Rectangle 19.png" alt="" />
+            <img src="/images/rectangle19.png" alt="" />
             <p>Strategy Games</p>
           </div>
         </div>
@@ -252,7 +257,7 @@
     <footer class="footer-section">
       <div class="footer-container">
         <div class="logo">
-          <img src="images/Frame.png" alt="" />
+          <img src="images/frame.png" alt="" />
           <h2>Gamer</h2>
         </div>
 
@@ -270,23 +275,23 @@
         <div class="footer-icon">
           <ul>
             <li>
-              <button><i class="fa-brands fa-twitter"></i></button>
+              <a href=""><i class="fa-brands fa-twitter"></i></a>
             </li>
 
             <li>
-              <button><i class="fa-brands fa-facebook"></i></button>
+              <a href=""><i class="fa-brands fa-facebook"></i></a>
             </li>
 
             <li>
-              <button><i class="fa-brands fa-youtube"></i></button>
+              <a href=""><i class="fa-brands fa-youtube"></i></a>
             </li>
 
             <li>
-              <button><i class="fa-brands fa-linkedin"></i></button>
+              <a href=""><i class="fa-brands fa-linkedin"></i></a>
             </li>
 
             <li>
-              <button><i class="fa-brands fa-instagram"></i></button>
+              <a href=""> <i class="fa-brands fa-instagram"></i></a>
             </li>
           </ul>
         </div>
