design changes added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     ></script>
   </head>
   <body>
-    <header>
+    <header class="wrapper">
       <div class="header-container">
         <div class="logo">
           <img src="images/frame.png" alt="logo" />
@@ -37,222 +37,146 @@
       </div>
     </header>
 
-    <section class="banner-section">
-      <div class="banner-container">
-        <div class="banner-intro">
-          <p class="b-p">
-            PLAY LIKE THE <span class="b-pink"><b>G.O.A.T</b></span>
-          </p>
+    <main class="wrapper">
+      <section class="banner-section wrapper">
+        <div class="banner-container">
+          <div class="banner-intro">
+            <p class="b-p">
+              PLAY LIKE THE <span class="b-pink"><b>G.O.A.T</b></span>
+            </p>
 
-          <p class="b_color">
-            <i class="fa-regular fa-circle-play"></i> 1-click instan play
-          </p>
-          <p class="b_color">
-            <i class="fa-solid fa-download"></i> No Download
-          </p>
-          <p class="b_color">
-            <i class="fa-solid fa-users"></i> 1000s of supported online games
-          </p>
-          <button class="btn-p">SIGN IN</button>
-          <button class="btn-b">GO ROGUE</button>
-        </div>
-
-        <div class="banner-img">
-          <img src="images/group18.png" alt="" />
-        </div>
-      </div>
-    </section>
-
-    <section class="know-section">
-      <div class="know-container">
-        <div class="know-img">
-          <img src="images/pngwing4.png" alt="" />
-        </div>
-        <div class="know-de">
-          <h2 class="">We are gamer</h2>
-          <p class="pt b_color">
-            An international digital games and entertainment company. We
-            develop, publish and distribute multiplayer mobile games. We reach
-            over 400 million players each month and our audience keeps growing.
-          </p>
-          <button class="know-btn btn-p">KNOW MORE</button>
-          <p class="pp b_color">Our purpose...</p>
-          <p class="pq"><q>unleash the gamer in everyone</q></p>
-        </div>
-      </div>
-    </section>
-
-    <section class="games-section">
-      <div class="games-container">
-        <div class="gm-tx">
-          <h2>Online Games <span>Funny Videos</span></h2>
-          <p class="b_color">
-            A Collection of hilarious videos to Brighten Your Day
-          </p>
-        </div>
-
-        <div class="games-cards">
-          <div class="game-card">
-            <img src="images/rectangle4.png" alt="" />
             <p class="b_color">
-              No download.No installs.Play games instantly on Gamer.
+              <i class="fa-regular fa-circle-play"></i> 1-click instan play
+            </p>
+            <p class="b_color">
+              <i class="fa-solid fa-download"></i> No Download
+            </p>
+            <p class="b_color">
+              <i class="fa-solid fa-users"></i> 1000s of supported online games
+            </p>
+            <button class="btn-p">SIGN IN</button>
+            <button class="btn-b">GO ROGUE</button>
+          </div>
+
+          <div class="banner-img">
+            <img src="images/group18.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <section class="know-section wrapper">
+        <div class="know-container">
+          <div class="know-img">
+            <img src="images/pngwing4.png" alt="" />
+          </div>
+          <div class="know-de">
+            <h2 class="">We are gamer</h2>
+            <p class="pt b_color">
+              An international digital games and entertainment company. We
+              develop, publish and distribute multiplayer mobile games. We reach
+              over 400 million players each month and our audience keeps
+              growing.
+            </p>
+            <button class="know-btn btn-p">KNOW MORE</button>
+            <p class="pp b_color">Our purpose...</p>
+            <p class="pq"><q>unleash the gamer in everyone</q></p>
+          </div>
+        </div>
+      </section>
+
+      <section class="games-section wrapper">
+        <div class="games-container">
+          <div class="gm-tx">
+            <h2>Online Games <span>Funny Videos</span></h2>
+            <p class="b_color">
+              A Collection of hilarious videos to Brighten Your Day
             </p>
           </div>
 
-          <div class="game-card">
-            <img src="images/rectangle5.png" alt="" />
-            <p class="b_color">Did you score? #unblockedgames #schoo</p>
-          </div>
+          <div class="games-cards">
+            <div class="game-card">
+              <img src="images/rectangle4.png" alt="" />
+              <p class="b_color">
+                No download.No installs.Play games instantly on Gamer.
+              </p>
+            </div>
 
-          <div class="game-card">
-            <img src="images/rectangle6.png" alt="" />
-            <p class="b_color">Breaking game records like OG</p>
-          </div>
+            <div class="game-card">
+              <img src="images/rectangle5.png" alt="" />
+              <p class="b_color">Did you score? #unblockedgames #schoo</p>
+            </div>
 
-          <div class="game-card">
-            <img src="images/rectangle7.png" alt="" />
-            <p class="b_color">
-              Busted gaming on school laptop, but you are still lit.
+            <div class="game-card">
+              <img src="images/rectangle6.png" alt="" />
+              <p class="b_color">Breaking game records like OG</p>
+            </div>
+
+            <div class="game-card">
+              <img src="images/rectangle7.png" alt="" />
+              <p class="b_color">
+                Busted gaming on school laptop, but you are still lit.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="anniversary-section wrapper">
+        <div class="anniversary-container">
+          <div class="ani-tx">
+            <p class="play-text">
+              <span>Play Instantly, </span>
+              No Downloads No Installs.
+            </p>
+            <p class="play-para b_color">
+              Play games online for free without downloading. Just click the
+              Play button and play instantly in your browser
             </p>
           </div>
+
+          <div class="ani-img">
+            <img class="image1" width="" src="images/rectangle55.png" alt="" />
+            <img class="image2" src="images/rectangle66.png" alt="" />
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="anniversary-section">
-      <div class="anniversary-container">
-        <div class="ani-tx">
-          <p class="play-text">
-            <span>Play Instantly, </span>
-            No Downloads No Installs.
-          </p>
-          <p class="play-para b_color">
-            Play games online for free without downloading. Just click the Play
-            button and play instantly in your browser
-          </p>
-        </div>
-
-        <div class="ani-img">
-          <img class="image1" width="" src="images/rectangle55.png" alt="" />
-          <img class="image2" src="images/rectangle66.png" alt="" />
-        </div>
-      </div>
-    </section>
-
-    <section class="anid-section">
-      <div class="anid-container">
-        <div class="anid-img">
-          <img class="anid-img1" src="images/rectangle67.png" alt="" />
-          <img class="anid-img2" src="images/rectangle78.png" alt="" />
-        </div>
-
-        <div class="anid-tx">
-          <p class="play-text2">
-            <span>Play Games Online</span>
-            Anywhere, Anytime!
-          </p>
-          <p class="play-para2 b_color">
-            PC. dad s phone, moms tablet, or your Chromebook, with Gamer you can
-            play your favorite games online for free, any time, anywhere , on
-            any device.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section class="careers-section">
-      <div class="careers-container">
-        <div class="careers-info">
-          <h3>Careers</h3>
-          <p class="wt">
-            Gamer is driven to create the best and most fun games for our
-            millions of players all around the world, and we,re always on the
-            lookout for more top talent to join our growing team. If you,d like
-            to help us make great games and be a part of Gamers bright future,
-            we,d love to hear from you.
-          </p>
-
-          <div class="careers-op">
-            <div class="careers-1">
-              <p>Multimedia Artist +</p>
-
-              <p>Data Engineer +</p>
-
-              <p>Adroid Engineer +</p>
-              <p>Server Developer +</p>
-              <p>Group Financial Accountant</p>
-              <p>Senior User Acuisition Specialist</p>
+      <section class="allgames-section wrapper">
+        <div class="allgames-container">
+          <div class="allgames-cards">
+            <div class="allgame-card">
+              <img src="/images/rectangle11.png" alt="" />
+              <p>Action Games</p>
             </div>
 
-            <div class="caree-add">
-              <p>Lisbon, Portugal</p>
-              <p>Lisbon, Portugal</p>
+            <div class="allgame-card">
+              <img src="/images/rectangle12.png" alt="" />
+              <p>Adventure Games</p>
+            </div>
 
-              <p>Zoetermeer, Netherlands</p>
-              <p>Lisbon, Portugal</p>
-              <p>London, United Kingdom</p>
-              <p>Lisbon, Portugal</p>
+            <div class="allgame-card">
+              <img src="/images/rectangle13.png" alt="" />
+              <p>Arcade Games</p>
+            </div>
+
+            <div class="allgame-card">
+              <img src="/images/rectangle14.png" alt="" />
+              <p>Educational Games</p>
+            </div>
+
+            <div class="allgame-card">
+              <img src="/images/rectangle15.png" alt="" />
+              <p>Word Games</p>
+            </div>
+
+            <div class="allgame-card">
+              <img src="/images/rectangle16.png" alt="" />
+              <p>Role Palying Games</p>
             </div>
           </div>
-          <button class="posi-btn">SEE ALL POSITIONS</button>
         </div>
-
-        <div class="careers-img">
-          <img src="images/group65.png" alt="" />
-        </div>
-      </div>
-    </section>
-
-    <section class="allgames-section">
-      <div class="allgames-container">
-        <div class="allgames-cards">
-          <div class="allgame-card">
-            <img src="/images/rectangle11.png" alt="" />
-            <p>Action Games</p>
-          </div>
-
-          <div class="allgame-card">
-            <img src="/images/rectangle12.png" alt="" />
-            <p>Adventure Games</p>
-          </div>
-
-          <div class="allgame-card">
-            <img src="/images/rectangle13.png" alt="" />
-            <p>Arcade Games</p>
-          </div>
-
-          <div class="allgame-card">
-            <img src="/images/rectangle14.png" alt="" />
-            <p>Educational Games</p>
-          </div>
-
-          <div class="allgame-card">
-            <img src="/images/rectangle15.png" alt="" />
-            <p>Word Games</p>
-          </div>
-
-          <div class="allgame-card">
-            <img src="/images/rectangle16.png" alt="" />
-            <p>Role Palying Games</p>
-          </div>
-
-          <div class="allgame-card">
-            <img src="/images/rectangle17.png" alt="" />
-            <p>Music & Audio Games</p>
-          </div>
-
-          <div class="allgame-card">
-            <img src="/images/rectangle18.png" alt="" />
-            <p>Puzzle Games</p>
-          </div>
-
-          <div class="allgame-card">
-            <img src="/images/rectangle19.png" alt="" />
-            <p>Strategy Games</p>
-          </div>
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <footer class="footer-section">
       <div class="footer-container">
