--- a/index.html
+++ b/index.html
@@ -3,232 +3,178 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gamer zone</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css" />
     <link rel="shortcut icon" href="images/frame.png" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/c0ce1703a8.js"
       crossorigin="anonymous"
     ></script>
+    <title>Gamer zone</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
-    <header class="wrapper">
+    <header class="header-section">
       <div class="header-container">
         <div class="logo">
           <img src="images/frame.png" alt="logo" />
-          <p class="lh-bold"><span class="lt-p">G</span>emer</p>
+          <p class="logo-big"><span class="pink-text">G</span>amer</p>
         </div>
-        <nav>
-          <ul>
-            <li><a class="nA" href="">About</a></li>
-            <li><a class="nA" href="">Developers </a></li>
-            <li class="fobtn">
-              <p>Follow Us On</p>
-              <a href="">
-                <img src="images/youtube.png" alt="" />
-              </a>
-              <a href="">
-                <img src="images/tik-tok1.png" alt="" />
-              </a>
-            </li>
-          </ul>
-        </nav>
+
+        <ul class="nav">
+          <li>
+            <a href="!#">About Us</a>
+          </li>
+          <li><a href="!#">Developers</a></li>
+          <li class="nav-b">
+            Follow Us On
+
+            <a href="!#"><i class="fa-brands fa-youtube"></i></a>
+
+            <a href=""><i class="fa-brands fa-tiktok"></i></a>
+          </li>
+        </ul>
       </div>
     </header>
 
-    <main class="wrapper">
-      <section class="banner-section wrapper">
-        <div class="banner-container">
-          <div class="banner-intro">
-            <p class="b-p">
-              PLAY LIKE THE <span class="b-pink"><b>G.O.A.T</b></span>
-            </p>
-
-            <p class="b_color">
-              <i class="fa-regular fa-circle-play"></i> 1-click instan play
-            </p>
-            <p class="b_color">
-              <i class="fa-solid fa-download"></i> No Download
-            </p>
-            <p class="b_color">
-              <i class="fa-solid fa-users"></i> 1000s of supported online games
-            </p>
-            <button class="btn-p">SIGN IN</button>
-            <button class="btn-b">GO ROGUE</button>
-          </div>
-
-          <div class="banner-img">
-            <img src="images/group18.png" alt="" />
-          </div>
-        </div>
-      </section>
-
-      <section class="know-section wrapper">
-        <div class="know-container">
-          <div class="know-img">
-            <img src="images/pngwing4.png" alt="" />
-          </div>
-          <div class="know-de">
-            <h2 class="">We are gamer</h2>
-            <p class="pt b_color">
-              An international digital games and entertainment company. We
-              develop, publish and distribute multiplayer mobile games. We reach
-              over 400 million players each month and our audience keeps
-              growing.
-            </p>
-            <button class="know-btn btn-p">KNOW MORE</button>
-            <p class="pp b_color">Our purpose...</p>
-            <p class="pq"><q>unleash the gamer in everyone</q></p>
-          </div>
-        </div>
-      </section>
-
-      <section class="games-section wrapper">
-        <div class="games-container">
-          <div class="gm-tx">
-            <h2>Online Games <span>Funny Videos</span></h2>
-            <p class="b_color">
-              A Collection of hilarious videos to Brighten Your Day
-            </p>
-          </div>
-
-          <div class="games-cards">
-            <div class="game-card">
-              <img src="images/rectangle4.png" alt="" />
-              <p class="b_color">
-                No download.No installs.Play games instantly on Gamer.
-              </p>
-            </div>
-
-            <div class="game-card">
-              <img src="images/rectangle5.png" alt="" />
-              <p class="b_color">Did you score? #unblockedgames #schoo</p>
-            </div>
-
-            <div class="game-card">
-              <img src="images/rectangle6.png" alt="" />
-              <p class="b_color">Breaking game records like OG</p>
-            </div>
-
-            <div class="game-card">
-              <img src="images/rectangle7.png" alt="" />
-              <p class="b_color">
-                Busted gaming on school laptop, but you are still lit.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="anniversary-section wrapper">
-        <div class="anniversary-container">
-          <div class="ani-tx">
-            <p class="play-text">
-              <span>Play Instantly, </span>
-              No Downloads No Installs.
-            </p>
-            <p class="play-para b_color">
-              Play games online for free without downloading. Just click the
-              Play button and play instantly in your browser
-            </p>
-          </div>
-
-          <div class="ani-img">
-            <img class="image1" width="" src="images/rectangle55.png" alt="" />
-            <img class="image2" src="images/rectangle66.png" alt="" />
-          </div>
-        </div>
-      </section>
-
-      <section class="allgames-section wrapper">
-        <div class="allgames-container">
-          <div class="allgames-cards">
-            <div class="allgame-card">
-              <img src="/images/rectangle11.png" alt="" />
-              <p>Action Games</p>
-            </div>
-
-            <div class="allgame-card">
-              <img src="/images/rectangle12.png" alt="" />
-              <p>Adventure Games</p>
-            </div>
-
-            <div class="allgame-card">
-              <img src="/images/rectangle13.png" alt="" />
-              <p>Arcade Games</p>
-            </div>
-
-            <div class="allgame-card">
-              <img src="/images/rectangle14.png" alt="" />
-              <p>Educational Games</p>
-            </div>
-
-            <div class="allgame-card">
-              <img src="/images/rectangle15.png" alt="" />
-              <p>Word Games</p>
-            </div>
-
-            <div class="allgame-card">
-              <img src="/images/rectangle16.png" alt="" />
-              <p>Role Palying Games</p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer class="footer-section">
-      <div class="footer-container">
-        <div class="logo">
-          <img src="images/frame.png" alt="" />
-          <h2>Gamer</h2>
+    <section class="banner-section">
+      <div class="banner-container">
+        <div class="banner-left">
+          <p class="banner-heading">
+            PLAY LIKE THE <span class="fancy-color">G.O.A.T</span>
+          </p>
+          <p>1-Click instant play</p>
+          <p>No Download</p>
+          <p>1000s of supported online games</p>
+          <button>SIGN IN</button>
+          <button>Go Rogue</button>
         </div>
 
-        <div class="footer-nav">
-          <ul>
-            <li>Our Stroy</li>
-            <li>Games</li>
-            <li>Web Games</li>
-            <li>Careers</li>
-            <li>Support</li>
-            <li>My Account</li>
-          </ul>
+        <div class="banner-right">
+          <img src="images/group18.png" alt="" />
         </div>
-
-        <div class="footer-icon">
-          <ul>
-            <li>
-              <a href=""><i class="fa-brands fa-twitter"></i></a>
-            </li>
-
-            <li>
-              <a href=""><i class="fa-brands fa-facebook"></i></a>
-            </li>
-
-            <li>
-              <a href=""><i class="fa-brands fa-youtube"></i></a>
-            </li>
-
-            <li>
-              <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            </li>
-
-            <li>
-              <a href=""> <i class="fa-brands fa-instagram"></i></a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="policy">
-          <p>Terms and Conditions</p>
-          <p>Privacy Policy</p>
-          <p>Cookie Policy</p>
-          <p>Privacy Setting</p>
-        </div>
-
-        <p class="fo-p">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
       </div>
-    </footer>
+    </section>
+
+    <section class="wearegamer-section">
+      <div class="wearegamer-container">
+        <div class="weleft">
+          <img src="images/pngwing4.png" alt="" />
+        </div>
+
+        <div class="weright">
+          <h2>We are gamer</h2>
+
+          <p>
+            An international digital games and entertainment company. We
+            develop, publish and distribute multiplayer mobile games. We reach
+            over 400 million players each month and our audience keeps growing.
+          </p>
+
+          <button>know more</button>
+          <p>Our purpose...</p>
+          <p>“unleash the gamer in everyone”</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="video-section">
+      <div class="video-container">
+        <div class="video-heading">
+          <h3>Online Games Funny Videos</h3>
+          <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+        </div>
+
+        <div class="video-cards">
+          <div class="video-card">
+            <div class="video-img">
+              <img src="images/rectangle4.png" alt="" />
+            </div>
+            <div class="video-text">
+              <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+          </div>
+          <div class="video-card">
+            <div class="video-img">
+              <img src="images/rectangle5.png" alt="" />
+            </div>
+            <div class="video-text">
+              <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+          </div>
+          <div class="video-card">
+            <div class="video-img">
+              <img src="images/rectangle6.png" alt="" />
+            </div>
+            <div class="video-text">
+              <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+          </div>
+          <div class="video-card">
+            <div class="video-img">
+              <img src="images/rectangle7.png" alt="" />
+            </div>
+            <div class="video-text">
+              <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="play-section">
+      <div class="play-container">
+        <div class="play-left">
+          <h3>Play Instantly, No Downloads No installs.</h3>
+
+          <p>
+            Play games online for free without downloading. Just click the Play
+            button and play instantly in your browser.
+          </p>
+        </div>
+
+        <div class="play-right">
+          <div class="play-img">
+            <img class="img1" src="images/rectangle55.png" alt="" />
+
+            <img class="img2" src="images/rectangle66.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="allgames-section">
+      <div class="allgames-container">
+        <div class="allgames-cards">
+          <div class="allgame-card">
+            <img src="images/rectangle11.png" alt="" />
+            <p>Action Games</p>
+          </div>
+          <div class="allgame-card">
+            <img src="images/rectangle12.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="images/rectangle13.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="images/rectangle14.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="images/rectangle15.png" alt="" />
+            <p>Action Games</p>
+          </div>
+
+          <div class="allgame-card">
+            <img src="images/rectangle16.png" alt="" />
+            <p>Action Games</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
